# cga2d

./: CHANGELOG.md  Cargo.toml  README.md
src/: axes.rs  blade.rs  lib.rs  multivector.rs  ops.rs  rotoflector.rs  rotor.rs  term.rs  tests.rs
src/tests/: mod.rs  objects.rs  transforms.rs
