[package]
name = "cga2d"
description = "2D Conformal Geometric Algebra primitives"
version = "0.4.0"
authors = ["Andrew Farkas"]
edition = "2021"
repository = "https://github.com/HactarCE/cga2d"
keywords = ["math", "rotor", "geometric-algebra", "conformal-geometry", "2d"]
categories = ["mathematics"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
bitflags = "2.6.0"
bytemuck = { version = "1.18.0", optional = true, features = ["derive"] }
itertools = "0.13.0"

[features]
bytemuck = ["dep:bytemuck", "bitflags/bytemuck"]
