[package]
name = "cga2d"
description = "2D Conformal Geometric Algebra primitives"
version = "0.5.0"
authors = ["Andrew Farkas"]
edition = "2021"
rust-version = "1.88.0"
repository = "https://github.com/HactarCE/cga2d"
keywords = ["math", "rotor", "geometric-algebra", "conformal-geometry", "2d"]
categories = ["mathematics"]
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = "warn"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }

assigning_clones = "allow"
comparison_chain = "allow"
doc_markdown = "warn"
if_then_some_else_none = "warn"
type_complexity = "allow"
manual_let_else = "warn"
match_like_matches_macro = "allow"
semicolon_if_nothing_returned = "warn"
semicolon_inside_block = "warn"
stable_sort_primitive = "warn"
too_many_arguments = "allow"
undocumented_unsafe_blocks = "warn"
uninlined_format_args = "warn"
unwrap_used = "warn"

[dependencies]
approx_collections = "2.0.0"
bitflags = "2.9.1"
bytemuck = { version = "1.23.1", optional = true, features = ["derive"] }
itertools = "0.14.0"

[features]
bytemuck = ["dep:bytemuck", "bitflags/bytemuck"]
